# learning_fastapi

./: .env.example  .gitignore  README.md  custom_log.py  fastapi-practice.db  fastapi-test.db  log.txt  pyproject.toml  requirements.txt  schemas.py  server.py
app/: main.py  middlewares.py  server.py
app/auth/: authentication.py  oauth2.py
app/db/: db_article.py  db_user.py  models.py
app/router/: article.py  blog_post.py  dependencies.py  file.py  product.py  user.py
app/routers/: product.py
app/routers/blog/: blog.py  get_blog.py  post_blog.py
app/routers/user/: user.py
app/templates/: templates.py
auth/: authentication.py  oauth2.py
db/: database.py  db_blog.py  db_user.py  hash.py  models.py
tests/: test_main.py
